--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,18 @@ body
 	padding: 0;
 	font-family: sans-serif;
 	background: white;
-	background-image: linear-gradient(rgba(255,255,255,0.5),rgba(255,255,255,0.5)), url(../images/bg_home.jpg);
-	background-attachment: fixed;
-	background-position: center;
-	background-repeat: no-repeat;
 	background-size: cover;
+	scroll-behavior: smooth;
+}
+
+::-moz-selection { /* Code for Firefox */
+  color: white;
+  background: black;
+}
+
+::selection {
+  color: white;
+  background: black;
 }
 
 header
@@ -17,7 +24,7 @@ header
 	top: 0;
 	left: 0;
 	padding: 0 100px;
-	background: #f0f8ff;
+	background: #fff;
 	width: 100%;
 	box-sizing: border-box;
 	border-bottom: 1px solid rgba(0,0,0,0.2);
@@ -34,7 +41,7 @@ header .logo a
 	text-decoration: none;
 }
 
-header .logo a .farm
+.farm-dark
 {
 	color: darkgreen;
 }
@@ -64,6 +71,7 @@ header nav ul li a
 	color: brown;
 	text-decoration: none;
 	display: block;
+	transition: 0.5s;
 }
 
 header nav ul li a:hover
@@ -71,6 +79,7 @@ header nav ul li a:hover
 	color: #fff;
 	background: green;
 	text-decoration: none;
+	transition: 0.5s;
 }
 
 header nav ul li a.active
@@ -124,6 +133,7 @@ header nav ul li a.active
 		right: 0;
 		width: 30%;
 		min-width: 200px;
+		border-left: solid 1px;
 	}
 	header nav ul
 	{
@@ -158,4 +168,152 @@ header nav ul li a.active
 .change .bar2
 {
 	opacity: 0;
+}
+
+.banner
+{
+	background: linear-gradient(rgba(255,255,255,0.7),rgba(255,255,255,0.7)), url(../images/banner.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.banner-title
+{
+	padding: 90px 40px 40px 40px;
+	color: green;
+	font-size: 80px;
+}
+
+@media(max-width: 706px)
+{
+	.banner-title
+	{
+		padding: 50px 200px 40px 200px;
+	}
+}
+
+@media(max-width: 692px)
+{
+	.banner-title
+	{
+		padding: 50px 140px 40px 140px;
+	}
+}
+
+@media(max-width: 492px)
+{
+	.banner-title
+	{
+		padding: 50px 40px 40px 40px;
+	}
+}
+
+.banner-text
+{
+	color: brown;
+	padding-bottom: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+@media(max-width: 367px)
+{
+	.banner-text
+	{
+		font-size: 25px;
+	}
+}
+
+@media(max-width: 332px)
+{
+	.banner-text
+	{
+		font-size: 23px;
+	}
+}
+
+.banner-btn1
+{
+	font-weight: 400;
+	font-size: 27px;
+	text-align: center;
+	color: #d9534f;
+	border: solid 2px #d9534f;
+	border-radius: 50px;
+	padding: 5px 10px;
+	transition: 0.5s;
+	margin-right: 20px;
+}
+
+.banner-btn
+{
+	padding-bottom: 20px;
+}
+
+.banner-btn1:hover
+{
+	text-decoration: none;
+	background-color: #d9534f;
+	transition: 0.5s;
+	color: white;
+}
+
+.banner-btn2
+{
+	font-weight: 400;
+	font-size: 27px;
+	text-align: center;
+	color: #420bff;
+	border: solid 2px #420bff;
+	border-radius: 50px;
+	padding: 5px 10px;
+	transition: 0.5s;
+	margin-left: 20px;
+}
+
+.banner-btn2:hover
+{
+	text-decoration: none;
+	background-color: #428bca;
+	transition: 0.5s;
+	color: white;
+}
+
+@media(max-width: 536px)
+{
+	.banner-btn1
+	{
+		margin-right: 10px;
+	}
+
+	.banner-btn2
+	{
+		margin-left: 10px;
+	}
+}
+
+@media(max-width: 434px)
+{
+	.banner-btn1
+	{
+		margin-right: 5px;
+	}
+
+	.banner-btn2
+	{
+		margin-left: 5px;
+	}
+}
+
+@media(max-width: 397px)
+{
+	.banner-btn1
+	{
+		font-size: 22px;
+	}
+
+	.banner-btn2
+	{
+		font-size: 22px;
+	}
 }
