--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,7 @@ header nav ul li a.active
 {
 	padding-bottom: 20px;
 	font-family: 'Raleway', sans-serif;
-	color: darkgreen;
+	color: #009000;
 }
 
 .banner-text
