--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ header nav ul li a.active
 {
 	width: 30px;
 	height: 2px;
-	background-color: #11e002;
+	background-color: #1ec712;
 	margin: 6px 0;
 	transition: 0.5s ease;
 }
