--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ header
 
 header .logo a
 {
-	color: #1ec712;
+	color: #19b30e;
 	height: 50px;
 	line-height: 50px;
 	font-size: 35px;
@@ -48,7 +48,7 @@ header .logo a
 
 .farm-dark
 {
-	color: #2ea802;
+	color: #278f01;
 }
 
 header nav
@@ -83,7 +83,7 @@ header nav ul li a
 header nav ul li a:hover
 {
 	color: #fff;
-	background: #1ec712;
+	background: #19b30e;
 	text-decoration: none;
 	transition: 0.2s;
 }
@@ -91,7 +91,7 @@ header nav ul li a:hover
 header nav ul li a.active
 {
 	color: #fff;
-	background: #2ea802;
+	background: #278f01;
 	text-decoration: none;
 }
 
@@ -186,7 +186,7 @@ header nav ul li a.active
 .banner-title
 {
 	padding: 90px 40px 20px 40px;
-	color: #1ec712;
+	color: #19b30e;
 	font-size: 100px;
 	text-shadow: 0 0 0px #0d9903;
 	font-family: 'title';
