--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ header nav ul li a
 	height: 50px;
 	line-height: 50px;
 	padding: 0 20px;
-	color: brown;
+	color: #a52a2a;
 	text-decoration: none;
 	display: block;
 	transition: 0.2s;
@@ -225,13 +225,38 @@ header nav ul li a.active
 .banner-tagline
 {
 	padding-bottom: 20px;
+	padding-left: 400px;
 	font-family: 'Raleway', sans-serif;
 	color: #007400;
 }
 
+@media(max-width: 775px)
+{
+	.banner-tagline
+	{
+		padding-left: 250px;
+	}
+}
+
+@media(max-width: 590px)
+{
+	.banner-tagline
+	{
+		padding-left: 150px;
+	}
+}
+
+@media(max-width: 485px)
+{
+	.banner-tagline
+	{
+		padding-left: 0px;
+	}
+}
+
 .banner-text
 {
-	color: brown;
+	color: #a52a2a;
 	padding-bottom: 40px;
 	padding-left: 20px;
 	padding-right: 20px;
@@ -352,4 +377,69 @@ header nav ul li a.active
 	{
 		font-size: 19px;
 	}
+}
+
+.grass
+{
+	width: 100%;
+}
+
+footer
+{
+	background: url(../images/dirt.jpg);
+	color: #fff;
+}
+
+.insta
+{
+	color: #fff !important;
+	background: #d6249f !important;
+  	background: linear-gradient(45deg,#d6249f,#285aeb) !important;
+  	border: none !important;
+  	border-radius: 0.3em !important;
+}
+
+.fb
+{
+	color: #fff !important;
+	background: #4267B2 !important;
+	border: none !important;
+	border-radius: 0.3em !important;
+}
+
+.footer-input
+{
+	outline: none;
+    padding: 12px 15px;
+    color: #fff;
+    font-size: 13px;
+    width: 85%;
+    border: none;
+    background: none;
+    letter-spacing: 1px;
+}
+
+.footer-button
+{
+	display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    color: #fff !important;
+}
+
+.footer-form
+{
+	width: 100%;
+	border: solid 1px #fff;
 }
