--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ header nav ul li a.active
 
 .banner
 {
-	background: linear-gradient(rgba(255,255,255,0.85),rgba(255,255,255,0.85)), url(../images/banner.png);
+	background: linear-gradient(rgba(255,255,255,0.8),rgba(255,255,255,0.8)), url(../images/banner.png);
 	background-size: cover;
 	background-repeat: no-repeat;
 }
@@ -379,6 +379,12 @@ header nav ul li a.active
 	}
 }
 
+.grass-img
+{
+	padding-bottom: 0 !important;
+	margin-bottom: 0 !important;
+}
+
 .grass
 {
 	width: 100%;
@@ -412,7 +418,6 @@ footer
 	outline: none;
     padding: 12px 15px;
     color: #fff;
-    font-size: 13px;
     width: 85%;
     border: none;
     background: none;
@@ -422,9 +427,7 @@ footer
 .footer-button
 {
 	display: inline-block;
-    font-weight: 400;
     text-align: center;
-    white-space: nowrap;
     vertical-align: middle;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -432,7 +435,6 @@ footer
     user-select: none;
     border: 1px solid transparent;
     padding: 0.375rem 0.75rem;
-    font-size: 1rem;
     line-height: 1.5;
     border-radius: 0.25rem;
     color: #fff !important;
