--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ header
 	width: 100%;
 	box-sizing: border-box;
 	border-bottom: 1px solid rgba(0,0,0,0.2);
+	z-index: 50;
 }
 
 header .logo a
@@ -392,7 +393,7 @@ header nav ul li a.active
 
 footer
 {
-	background: linear-gradient(rgba(33,25,20,0),rgba(33,25,20,1)),url(../images/dirt.jpg);
+	background: linear-gradient(rgba(33,25,20,0),rgba(33,25,20,0.8)),url(../images/dirt.jpg);
 }
 
 .insta
@@ -414,12 +415,23 @@ footer
 .footer-input
 {
 	outline: none;
-    padding: 12px 15px;
+    padding: 5px 15px;
     color: #fff;
-    width: 85%;
+    width: 82%;
     border: none;
     background: none;
-    letter-spacing: 1px;
+}
+
+.footer-input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+	color: rgba(255,255,255,0.35);
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+	color: rgba(255,255,255,0.35);
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+	color: rgba(255,255,255,0.35);
 }
 
 .footer-button
@@ -432,16 +444,16 @@ footer
     -ms-user-select: none;
     user-select: none;
     border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
+    padding: 5px 10px 5px 15px !important;
     line-height: 1.5;
     border-radius: 0.25rem;
-    color: #fff !important;
+    color: rgba(255,255,255,0.75) !important;
 }
 
 .footer-form
 {
 	width: 100%;
-	border: solid 1px #fff;
+	border: solid 1px rgba(255,255,255,0.75);
 }
 
 .footer-blocks
@@ -467,4 +479,66 @@ footer
 	padding-top: 5px;
 	padding-bottom: 10px;
 	color: rgba(255,255,255,0.75);
+}
+
+.footer-mid
+{
+	color: rgba(255,255,255,0.75);
+	padding-top: 5px;
+	padding-bottom: 10px;
+}
+
+.footer-social1
+{
+	margin-left: 0px;
+	margin-right: 5px;
+}
+
+.footer-social2
+{
+	margin-left: 5px;
+	margin-right: 5px;
+}
+
+.footer-right
+{
+	color: rgba(255,255,255,0.75);
+}
+
+.credits
+{
+	text-align: right;
+	color: rgba(255,255,255,0.2);
+	transition: 0.3s;
+	font-size: 10px;
+}
+
+.credits:hover
+{
+	color: rgba(255,255,255,0.75);
+	transition: 0.3s;
+}
+
+.digi-sol
+{
+	float: right;
+	height: 1em;
+	width: auto;
+	padding: 0.1em 0 0 0.5em;
+	opacity: 0.5;
+	transition: 0.3s;
+}
+
+.credits:hover .digi-sol
+{
+	opacity: 0.75;
+	transition: 0.3s;
+}
+
+.copyright
+{
+	padding: 0 0 5px 0;
+	margin: 0 0 0 0;
+	font-size: 12px;
+	color: rgba(255,255,255,0.65);
 }
