--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,35 @@ header nav ul li a.active
 		border-bottom: 1px solid rgba(0,0,0,0.2);
 		font-weight: 500;
 	}
+	.layer0
+	{
+		position: fixed;
+		display: block;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: rgba(0,0,0,0.5);
+		z-index: 25;
+	}
+}
+
+@media(max-width: 360px)
+{
+	header
+	{
+		padding: 0 10px;
+	}
+}
+
+@media(max-width: 334px)
+{
+	header
+	{
+		padding: 0 5px;
+	}
 }
 
 .bar1, .bar2, .bar3
