--- a/css/style.css
+++ b/css/style.css
@@ -309,13 +309,22 @@ header nav ul li a.active
 	padding-left: 20px;
 	padding-right: 20px;
 	font-family: 'Montserrat', sans-serif;
+	font-size: 24px;
 }
 
-@media(max-width: 320px)
+@media(max-width: 409px)
 {
 	.banner-text
 	{
-		font-size: 22px;
+		font-size: 20px;
+	}
+}
+
+@media(max-width: 348px)
+{
+	.banner-text
+	{
+		font-size: 18px;
 	}
 }
 
@@ -440,6 +449,13 @@ footer
 	border-radius: 0.3em !important;
 }
 
+.whatsapp
+{
+	border: none !important;
+	color: #fff !important;
+	border-radius: 0.3em !important;
+}
+
 .footer-input
 {
 	outline: none;
@@ -518,14 +534,20 @@ footer
 
 .footer-social1
 {
-	margin-left: 0px;
-	margin-right: 5px;
+	margin: 3px;
+	padding: 4px 10px !important;
 }
 
 .footer-social2
 {
-	margin-left: 5px;
-	margin-right: 5px;
+	margin: 3px;
+	padding: 4px 10px !important;
+}
+
+.footer-social3
+{
+	margin: 3px;
+	padding: 4px 10px !important;
 }
 
 .footer-right
@@ -682,19 +704,6 @@ footer
 	padding-bottom: 15px;
 }
 
-.counter
-{
-	font-size: 30px;
-}
-
-@media(max-width: 336px)
-{
-	.counter
-	{
-		font-size: 27px;
-	}
-}
-
 .success-color
 {
 	color: #008900;
@@ -727,6 +736,7 @@ footer
 .product-container
 {
 	padding-bottom: 20px;
+	min-height: 600px;
 }
 
 .product
@@ -890,4 +900,133 @@ footer
 	{
 		padding: 0px;
 	}
+}
+
+/* Form Css */
+.ev_form
+{
+    border: 1px solid #e09b9b;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    padding: 2%;
+}
+
+.ev_btn
+{
+    width: 25%;
+}
+
+.form-required-show
+{
+    text-align: right;
+    font-size: 13px;
+}
+
+.form-required
+{
+    color: red;
+}
+
+.txt-area
+{
+	resize: none;
+	height: 100px !important;
+}
+
+.contact-about
+{
+	padding: 2%;
+	margin: 10px 0 15px;
+}
+
+.contact-fa
+{
+	padding-right: 2px;
+}
+
+.contact-head
+{
+	font-family: sans-serif;
+	font-size: 20px;
+	padding: 5px 0;
+	color: #154573;
+}
+
+.contact-call
+{
+	font-family: sans-serif;
+	color: rgba(21,69,115,0.8);
+	font-size: 16px;
+}
+
+.contact-call:hover
+{
+	text-decoration: none;
+}
+
+.whatsapp-button
+{
+	margin-top: 5px;
+	font-size: 16px;
+}
+
+.contact-info
+{
+	font-family: sans-serif;
+	color: rgba(21,69,115,0.8);
+	padding: 5px 0 10px;
+	font-size: 16px;
+}
+
+.contact-info-special
+{
+	font-family: sans-serif;
+	color: rgba(0,0,0,0.75);
+	padding: 5px 0;
+	font-size: 16px;
+}
+
+.contact-social-btn
+{
+	margin-top: 5px;
+}
+
+.product-search
+{
+	display: flex;
+	justify-content: center;
+}
+
+.product-search-input
+{
+	width: 85%;
+	outline: none;
+	border: none;
+	height: 40px;
+}
+
+.product-search-icon
+{
+	background: none;
+	border: none;
+	outline: none;
+	height: 40px;
+}
+
+.product-search-icon:focus
+{
+	background: none;
+	border: none;
+	outline: none;
+	height: 40px;
+}
+
+.product-search-bar
+{
+	border: 1px solid;
+	width: 70%;
+	min-width: 300px;
+	border-radius: 5px;
+	border-color: #5545b3;
 }
